<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:textSize="40pt"
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:ems="10"
        android:inputType="textPersonName"
        android:gravity="right|center"
        android:layout_weight="1"
        android:text="0" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:onClick="cliclClear"
                android:id="@+id/buClear"
                android:text="@string/clear"
                style="@style/Button" />

            <com.google.android.material.button.MaterialButton
                android:onClick="clickNumber"
                android:id="@+id/buPlusMinus"
                android:text="@string/plusMinus"
                style="@style/Button" />

            <com.google.android.material.button.MaterialButton
                android:onClick="operation"
                android:id="@+id/buDevide"
                android:text="@string/devide"
                style="@style/Button" />

            <com.google.android.material.button.MaterialButton
                android:onClick="operation"
                android:id="@+id/buMultiplu"
                android:text="@string/multiplu"
                style="@style/Button" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bu7"
                android:onClick="clickNumber"
                android:text="@string/seven"
                style="@style/Button" />

            <com.google.android.material.button.MaterialButton
                android:onClick="clickNumber"
                android:id="@+id/bu8"
                android:text="@string/eight"
                style="@style/Button" />

            <com.google.android.material.button.MaterialButton
                android:onClick="clickNumber"
                android:id="@+id/bu9"
                android:text="@string/nine"
                style="@style/Button" />

            <com.google.android.material.button.MaterialButton
                android:onClick="clickPersent"
                android:id="@+id/buPersend"
                android:text="@string/persent"
                style="@style/Button" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.button.MaterialButton
                android:onClick="clickNumber"
                android:id="@+id/bu4"
                android:text="@string/four"
                style="@style/Button" />

            <com.google.android.material.button.MaterialButton
                android:onClick="clickNumber"
                android:id="@+id/bu5"
                android:text="@string/five"
                style="@style/Button" />

            <com.google.android.material.button.MaterialButton
                android:onClick="clickNumber"
                android:id="@+id/bu6"
                android:text="@string/six"
                style="@style/Button" />

            <com.google.android.material.button.MaterialButton
                android:onClick="operation"
                android:id="@+id/buPlus"
                android:text="@string/plus"
                style="@style/Button" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.button.MaterialButton
                android:onClick="clickNumber"
                android:id="@+id/bu1"
                android:text="@string/one"
                style="@style/Button" />

            <com.google.android.material.button.MaterialButton
                android:onClick="clickNumber"
                android:id="@+id/bu2"
                android:text="@string/two"
                style="@style/Button" />

            <com.google.android.material.button.MaterialButton
                android:onClick="clickNumber"
                android:id="@+id/bu3"
                android:text="@string/three"
                style="@style/Button" />

            <com.google.android.material.button.MaterialButton
                android:onClick="operation"
                android:id="@+id/buMinus"
                android:text="@string/minus"
                style="@style/Button" />

        </TableRow>
    </TableLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.button.MaterialButton
                    android:onClick="clickNumber"
                    android:id="@+id/bu0"
                    android:text="@string/zero"
                    android:layout_weight="2"
                    style="@style/Button" />

                <com.google.android.material.button.MaterialButton
                    android:onClick="clickNumber"
                    android:id="@+id/buDot"
                    android:text="@string/dot"
                    android:layout_weight="3"
                    style="@style/Button" />

                <com.google.android.material.button.MaterialButton
                    android:onClick="clickEqual"
                    android:id="@+id/buEquals"
                    android:text="@string/equals"
                    android:layout_weight="3"
                    style="@style/Button" />

            </TableRow>
         </LinearLayout>

</LinearLayout>